@@ -17,6 +17,15 @@ Version 1.18-23 (opened February 16, 2011)
 
 	* prestonfit, as.preston: default now 'tiesplit = TRUE'.
 
+	* decorana: Cajo ter Braak notified about false expansion of
+	computed zero eigenvalues in rescaling to axis scors and in
+	estimating eigenvalues. They are now zeroed. Cajo's example was a
+	6x5 petrie matrix:
+	petrie <- matrix(0, 6, 5)
+	diag(petrie) <- 1
+	petrie[row(petrie) - 1 == col(petrie)] <- 1
+	decorana(petrie)
+
 	* FAQ updates: using 'select' in ordination text() and points(),
 	using 'xlim' to flip axes or zoom into ordination plot(), the
 	non-effects of 'strata' in adonis(). All these indeed are
